--- a/src/pages/exhibition.html
+++ b/src/pages/exhibition.html
@@ -3,31 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A place to discover the history of our universe.">
-  <meta name="keywords" content="HTML, CSS">
+  <meta name="description" content="A place to discover the history of our universe, everything in just one place.">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="exhibition.css">
+  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" type="text/css" href="./../styles/exhibition.css">
   <title>Exhibition Spaces | Community Science Museum</title>
 </head>
 <body>
-  <nav id="navigation_bar">
-    <div class="logo">
-      <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
-    </div>
-    <ul>
-      <li><a href="visit.html">Visit</a></li>
-      <li><a href="joinus.html">Join us</a></li>
-      <li><a href="explore.html">Explore</a></li>
-      <li class="on_this_page"><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="/index.html">Home</a></li>
+
+  <nav class="nav"> 
+    <a href="./../../index.html" class="nav__logo">
+      <img src="../images_csm/logo.png" alt="Logo">
+    </a>
+    <ul class="nav__links">
+      <li class="nav__homeLink">
+        <a href="./../../index.html">Home</a>
+      </li>
+      <li class="nav__links--active">
+        <a href="../pages/exhibition.html">Exhibition</a>
+      </li>
+      <li>
+        <a href="../pages/explore.html">Explore</a>
+      </li>
+      <li>
+        <a href="../pages/joinus.html">Join us</a>
+      </li>
+      <li>
+        <a href="../pages/visit.html">Visit</a>
+      </li>
     </ul>
-  </nav>
-  <header class="header_container" alt="Visit Community Science Museum">
-    <div class="inside_header_container">
-      <h1>Exhibition spaces</h1>
+    <div class="nav__burger">
+      <div class="nav__burgerLine1"></div>
+      <div class="nav__burgerLine2"></div>
+      <div class="nav__burgerLine3"></div>
     </div>
+  </nav>
+
+  <header class="exhibition__header" alt="Visit Community Science Museum">
+      <h1>Exhibition spaces</h1>
   </header>
 </header>
+
 <h2 class="title_text">
   See what's on in museums and galleries
 </h2>
@@ -161,6 +177,7 @@
 <footer>
 <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
+<script src="../app.js"></script>
 <!-- Source photo of Cosmology: url<https://www.freepik.com/free-photo/3d-space-scene_1077125.htm#page=1&query=cosmos&position=3> Designed by kjpargeter / Freepik.
 Source photo of Robotics and Al: <https://unsplash.com/photos/jIBMSMs4_kA> by Franck V. on Unsplash
 Source photo of Ecology: <https://unsplash.com/photos/f-7lbC1G9ZA> by Franck V. on Unsplash -->
