--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -5,28 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore the wonder of the universe. We have everything from human history, medicine,
   technology, our planet and more.">
-  <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="explore.css">
+  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" type="text/css" href="./../styles/explore.css">
   <title>News | Community Science Museum</title>
 </head>
 <body>
-  <nav id="navigation_bar">
-    <div class="logo">
-      <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
-    </div>
-    <ul>
-      <li><a href="visit.html">Visit</a></li>
-      <li><a href="joinus.html">Join us</a></li>
-      <li class="on_this_page"><a href="explore.html">Explore</a></li>
-      <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="/index.html">Home</a></li>
+  
+  <nav class="nav"> 
+    <a href="./../../index.html" class="nav__logo">
+      <img src="../images_csm/logo.png" alt="Logo">
+    </a>
+    <ul class="nav__links">
+      <li class="nav__homeLink">
+        <a href="./../../index.html">Home</a>
+      </li>
+      <li>
+        <a href="../pages/exhibition.html">Exhibition</a>
+      </li>
+      <li class="nav__links--active">
+        <a href="../pages/explore.html">Explore</a>
+      </li>
+      <li>
+        <a href="../pages/joinus.html">Join us</a>
+      </li>
+      <li>
+        <a href="../pages/visit.html">Visit</a>
+      </li>
     </ul>
-  </nav>
-  <header class="header_container" alt="Visit Community Science Museum">
-    <div class="inside_header_container">
-      <h1>Explore</h1>
+    <div class="nav__burger">
+      <div class="nav__burgerLine1"></div>
+      <div class="nav__burgerLine2"></div>
+      <div class="nav__burgerLine3"></div>
     </div>
+  </nav>
+
+  <header class="explore__header" alt="Visit Community Science Museum">
+      <h1>Explore</h1>
   </header>
   <h2 class="title_text">
     Explore the world of science
@@ -134,6 +149,7 @@
 <footer>
   <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
+<script src="../app.js"></script>
 <!-- Photo source on third section: url <https://unsplash.com/photos/_Ym6wla_GMQ> by Science in HD on Unsplash.
 Photo source on fouth section: url <https://unsplash.com/photos/lQGJCMY5qcM> by Hans Reniers on Unsplash -->
 </body>
