--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -4,28 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Get involve with our programs and explore the world of science.">
-  <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="joinus.css">
+  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" type="text/css" href="./../styles/joinus.css">
 <title>Connect | Cummunity Science Museum</title>
 </head>
 <body>
-  <nav id="navigation_bar">
-    <div class="logo">
-      <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
-    </div>
-    <ul>
-      <li><a href="visit.html">Visit</a></li>
-      <li class="on_this_page"><a href="joinus.html">Join us</a></li>
-      <li><a href="explore.html">Explore</a></li>
-      <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="/index.html">Home</a></li>
+  
+  <nav class="nav"> 
+    <a href="./../../index.html" class="nav__logo">
+      <img src="../images_csm/logo.png" alt="Logo">
+    </a>
+    <ul class="nav__links">
+      <li class="nav__homeLink">
+        <a href="./../../index.html">Home</a>
+      </li>
+      <li>
+        <a href="../pages/exhibition.html">Exhibition</a>
+      </li>
+      <li>
+        <a href="../pages/explore.html">Explore</a>
+      </li>
+      <li class="nav__links--active">
+        <a href="../pages/joinus.html">Join us</a>
+      </li>
+      <li>
+        <a href="../pages/visit.html">Visit</a>
+      </li>
     </ul>
-  </nav>
-  <header class="header_container" alt="Visit Community Science Museum">
-    <div class="inside_header_container">
-      <h1>Join us</h1>
+    <div class="nav__burger">
+      <div class="nav__burgerLine1"></div>
+      <div class="nav__burgerLine2"></div>
+      <div class="nav__burgerLine3"></div>
     </div>
+  </nav>
+
+  <header class="joinus__header" alt="Visit Community Science Museum">
+      <h1>Join us</h1>
   </header>
   <h2 class="title_text">
     Come join us at the Community Science Museum where we’re committed to making science accessible to all.
@@ -150,6 +165,7 @@
 <footer>
   <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
+<script src="../app.js"></script>
   <!-- Image source: url <https://unsplash.com/photos/4le7k9XVYjE> by Kelly Sikkema on Unsplash 
       Image Source: url <https://www.freepik.com/free-photo/business-teamwork-join-hands-together-business-teamwork-concept_1185949.htm#page=1&query=support&position=28> by jcomp / Freepik
   -->
