--- a/src/pages/visit.html
+++ b/src/pages/visit.html
@@ -5,28 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Make an unforgettable visit at our museum. With free admission and 
   accessibility for wheelchair made it easier for everyone to explore. We do also have café and shop onsite.">
-  <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="visit.css">
+  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" type="text/css" href="./../styles/visit.css">
   <title>Visit | Community Science Museum</title>
 </head>
 <body>
-  <nav id="navigation_bar">
-    <div class="logo">
-      <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
-    </div>
-    <ul>
-      <li class="on_this_page"><a href="visit.html">Visit</a></li>
-      <li><a href="joinus.html">Join us</a></li>
-      <li><a href="explore.html">Explore</a></li>
-      <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="/index.html">Home</a></li>
+  
+  <nav class="nav"> 
+    <a href="./../../index.html" class="nav__logo">
+      <img src="../images_csm/logo.png" alt="Logo">
+    </a>
+    <ul class="nav__links">
+      <li class="nav__homeLink">
+        <a href="./../../index.html">Home</a>
+      </li>
+      <li>
+        <a href="../pages/exhibition.html">Exhibition</a>
+      </li>
+      <li>
+        <a href="../pages/explore.html">Explore</a>
+      </li>
+      <li>
+        <a href="../pages/joinus.html">Join us</a>
+      </li>
+      <li class="nav__links--active">
+        <a href="../pages/visit.html">Visit</a>
+      </li>
     </ul>
-  </nav>
-  <header class="header_container" alt="Visit Community Science Museum">
-    <div class="inside_header_container">
-      <h1>Visit</h1>
+    <div class="nav__burger">
+      <div class="nav__burgerLine1"></div>
+      <div class="nav__burgerLine2"></div>
+      <div class="nav__burgerLine3"></div>
     </div>
+  </nav>
+
+  <header class="visit__header" alt="Visit Community Science Museum">
+      <h1>Visit</h1>
   </header>
   <h2 class="title_text">
     Plan your visit
@@ -122,6 +137,7 @@
 <footer>
 <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
+<script src="../app.js"></script>
 <!-- Image source: url <https://unsplash.com/photos/A_dJOYpxEVU> by Andy Li on Unsplash -->
 <!-- Image source: url <https://unsplash.com/photos/UudGNHJdNSo> by Photo by AbsolutVision on Unsplash -->
 <!-- Image source: url <https://unsplash.com/photos/Wns3U-oVoLA> by Joseph Gonzalez on Unsplash -->
