--- a/index.html
+++ b/index.html
@@ -52,44 +52,45 @@
     </div>
   </header>
 
-  <main>
-    <h2 class="index__middleHeader">What's new</h2>
-    <!-- ----------- First Section ----------- -->
-    <section class="section_one">
-      <img src="/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
-      <p class="photo_source_mobile">Photo: Community Science Museum</p>
-      <h2 class="h2_one_push_right">Visiting Professor of Aeronautics</h2>
-        <p class="article_text">
+  <main class="index__main">
+    <h2 class="index__subHeader">What's new</h2>
+    <section class="index__sections">
+      <div class="index__SectionsImageContainer">
+        <img src="./src/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
+      </div>
+      <div class="index__sectionTextContainer">
+        <h2>Visiting Professor of Aeronautics</h2>
+        <p>
           It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology
-           will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
+          will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
         </p>
+      </div>
     </section>
-  <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
-
-    <!-- ----------- Second Section ----------- -->
-  <section class="section_two">
-    <img src="/images_csm/roberto-nickson-396152.jpg" alt="Mammut in the museum by night">
-      <p class="photo_source_mobile">Photo: Roberto Nickson, Community Science Museum</p>
-      <h2 class="h2_two_push_right">Night in the Museum</h2>
-        <p class="article_text">
+    <section class="index__sections">
+      <div class="index__SectionsImageContainer">
+        <img src="./src/images_csm/roberto-nickson-396152.jpg" alt="Mammut in the museum by night">
+      </div>
+      <div class="index__sectionTextContainer">
+        <h2>Night in the Museum</h2>
+        <p>
           Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. 
           Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
         </p>
-  </section>
-  <p class="photo_source_desktop_two">Photo: Roberto Nickson, Community Science Museum</p>
-
-  <!-- ----------- Third Section ----------- -->
-  <section class="section_one">
-    <img src="/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg" alt="Light being power up by electricity">
-    <p class="photo_source_mobile">Photo: Christian Dubovan on Unsplash</p>
-      <h2 class="h2_one_push_right">Energetica Exhibition on Loan</h2>
-        <p class="article_text">
+      </div>
+    </section>
+    <section class="index__sections">
+      <div class="index__SectionsImageContainer">
+        <img src="./src/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg" alt="Light being power up by electricity">
+      </div>
+      <div class="index__sectionTextContainer">
+        <h2>Energetica Exhibition on Loan</h2>
+        <p>
           On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
           It’s a series of installations that allow visitors to experience the power of the elements as we harness them. 
           From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
         </p>
+      </div>
       </section>
-      <p class="photo_source_desktop_one">Photo: Christian Dubovan on Unsplash</p>
   </main>
 
     <!-- ----------- Form Section ----------- -->
