--- a/src/pages/visit.html
+++ b/src/pages/visit.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Make an unforgettable visit at our museum. With free admission and 
   accessibility for wheelchair made it easier for everyone to explore. We do also have café and shop onsite.">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/visit.css">
   <title>Visit | Community Science Museum</title>
 </head>
@@ -113,30 +113,9 @@
     </form>
   </div>
   
+<footer class="footer"></footer>
 
-<section class="bottom">
-  <div class="hours">
-    <h4>Hours: </h4>
-    <p>Monday: Closed</p>
-    <p>Tuesday: 10:00 – 16:00</p>
-    <p>Wednesday: 10:00 – 16:00</p>
-    <p>Thursday: 10:00 – 16:00</p>
-    <p>Friday: 10:00 – 19:00</p>
-    <p>Saturday: 9:00 – 16:00</p>
-    <p>Sunday: 9:00 – 13:00</p>
-  </div>
-  <div class="address">
-    <h4>Address:</h4>
-    <p>Stigerplatåveien 210</p>
-    <p>8626 Mo i Rana</p>
-    <p>Norway</p>
-    <p>Phone: 90 00 00 00</p>
-    <p>E-mail: info@example.com</p>
-  </div>
-</section>
-<footer>
-<p>©2020 Community Science Museum, All rights reserved</p>
-</footer>
+<script src="../components/Footer.js"></script>  
 <script src="../app.js"></script>
 <!-- Image source: url <https://unsplash.com/photos/A_dJOYpxEVU> by Andy Li on Unsplash -->
 <!-- Image source: url <https://unsplash.com/photos/UudGNHJdNSo> by Photo by AbsolutVision on Unsplash -->
