--- a/src/pages/exhibition.html
+++ b/src/pages/exhibition.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A place to discover the history of our universe, everything in just one place.">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/exhibition.css">
   <title>Exhibition Spaces | Community Science Museum</title>
 </head>
@@ -154,29 +154,9 @@
   </form>
 </div>  
 
-<section class="bottom">
-  <div class="hours">
-    <h4>Hours: </h4>
-    <p>Monday: Closed</p>
-    <p>Tuesday: 10:00 – 16:00</p>
-    <p>Wednesday: 10:00 – 16:00</p>
-    <p>Thursday: 10:00 – 16:00</p>
-    <p>Friday: 10:00 – 19:00</p>
-    <p>Saturday: 9:00 – 16:00</p>
-    <p>Sunday: 9:00 – 13:00</p>
-  </div>
-  <div class="address">
-    <h4>Address:</h4>
-    <p>Stigerplatåveien 210</p>
-    <p>8626 Mo i Rana</p>
-    <p>Norway</p>
-    <p>Phone: 90 00 00 00</p>
-    <p>E-mail: info@example.com</p>
-  </div>
-</section>
-<footer>
-<p>©2020 Community Science Museum, All rights reserved</p>
-</footer>
+<footer class="footer"></footer>
+
+<script src="../components/Footer.js"></script>
 <script src="../app.js"></script>
 <!-- Source photo of Cosmology: url<https://www.freepik.com/free-photo/3d-space-scene_1077125.htm#page=1&query=cosmos&position=3> Designed by kjpargeter / Freepik.
 Source photo of Robotics and Al: <https://unsplash.com/photos/jIBMSMs4_kA> by Franck V. on Unsplash
