--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Explore the wonder of the universe. We have everything from human history, medicine,
   technology, our planet and more.">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/explore.css">
   <title>News | Community Science Museum</title>
 </head>
@@ -125,30 +125,9 @@
     </form>
   </div>
   
-    
-  <section class="bottom">
-    <div class="hours">
-      <h4>Hours: </h4>
-      <p>Monday: Closed</p>
-      <p>Tuesday: 10:00 – 16:00</p>
-      <p>Wednesday: 10:00 – 16:00</p>
-      <p>Thursday: 10:00 – 16:00</p>
-      <p>Friday: 10:00 – 19:00</p>
-      <p>Saturday: 9:00 – 16:00</p>
-      <p>Sunday: 9:00 – 13:00</p>
-    </div>
-    <div class="address">
-      <h4>Address:</h4>
-      <p>Stigerplatåveien 210</p>
-      <p>8626 Mo i Rana</p>
-      <p>Norway</p>
-      <p>Phone: 90 00 00 00</p>
-      <p>E-mail: info@example.com</p>
-    </div>
-</section>
-<footer>
-  <p>©2020 Community Science Museum, All rights reserved</p>
-</footer>
+<footer class="footer"></footer>
+
+<script src="../components/Footer.js"></script>  
 <script src="../app.js"></script>
 <!-- Photo source on third section: url <https://unsplash.com/photos/_Ym6wla_GMQ> by Science in HD on Unsplash.
 Photo source on fouth section: url <https://unsplash.com/photos/lQGJCMY5qcM> by Hans Reniers on Unsplash -->
