--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Get involve with our programs and explore the world of science.">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/shared.css">
+  <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/joinus.css">
 <title>Connect | Cummunity Science Museum</title>
 </head>
@@ -141,30 +141,10 @@
     </form>
   </div>
   
-  
-<section class="bottom">
-  <div class="hours">
-    <h4>Hours: </h4>
-    <p>Monday: Closed</p>
-    <p>Tuesday: 10:00 – 16:00</p>
-    <p>Wednesday: 10:00 – 16:00</p>
-    <p>Thursday: 10:00 – 16:00</p>
-    <p>Friday: 10:00 – 19:00</p>
-    <p>Saturday: 9:00 – 16:00</p>
-    <p>Sunday: 9:00 – 13:00</p>
-  </div>
-  <div class="address">
-    <h4>Address:</h4>
-    <p>Stigerplatåveien 210</p>
-    <p>8626 Mo i Rana</p>
-    <p>Norway</p>
-    <p>Phone: 90 00 00 00</p>
-    <p>E-mail: info@example.com</p>
-  </div>
-</section>
-<footer>
-  <p>©2020 Community Science Museum, All rights reserved</p>
-</footer>
+
+<footer class="footer"></footer>
+
+<script src="../components/Footer.js"></script>  
 <script src="../app.js"></script>
   <!-- Image source: url <https://unsplash.com/photos/4le7k9XVYjE> by Kelly Sikkema on Unsplash 
       Image Source: url <https://www.freepik.com/free-photo/business-teamwork-join-hands-together-business-teamwork-concept_1185949.htm#page=1&query=support&position=28> by jcomp / Freepik
