SEO consideration on meta data tag

--- a/src/pages/exhibition.html
+++ b/src/pages/exhibition.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A place to discover the history of our universe, everything in just one place.">
+  <meta name="description" content="A place to discover the history of our universe, everything in just one place. Take a closer look on our own human achievements and more.">
   <meta name="author" content="Suphachai Hestmark">
   <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/exhibition.css">
