--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get involve with our programs and explore the world of science.">
+  <meta name="description" content="Get involve with our programs and explore the world of science. Collaborate with our amazing team and more.">
   <meta name="author" content="Suphachai Hestmark">
   <link rel="stylesheet" href="./../styles/globalStyles.css">
   <link rel="stylesheet" type="text/css" href="./../styles/joinus.css">
