Styled EXHIBITION page

--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -1,135 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore the wonder of the universe. We have everything from human history, medicine,
-  technology, our planet and more.">
-  <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/globalStyles.css">
-  <link rel="stylesheet" type="text/css" href="./../styles/explore.css">
-  <title>News | Community Science Museum</title>
-</head>
-<body>
-  
-  <nav class="nav"> 
-    <a href="./../../index.html" class="nav__logo">
-      <img src="../images_csm/logo.png" alt="Logo">
-    </a>
-    <ul class="nav__links">
-      <li class="nav__homeLink">
-        <a href="./../../index.html">Home</a>
-      </li>
-      <li>
-        <a href="../pages/exhibition.html">Exhibition</a>
-      </li>
-      <li class="nav__links--active">
-        <a href="../pages/explore.html">Explore</a>
-      </li>
-      <li>
-        <a href="../pages/joinus.html">Join us</a>
-      </li>
-      <li>
-        <a href="../pages/visit.html">Visit</a>
-      </li>
-    </ul>
-    <div class="nav__burger">
-      <div class="nav__burgerLine1"></div>
-      <div class="nav__burgerLine2"></div>
-      <div class="nav__burgerLine3"></div>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the wonder of the universe. We have everything from human history, medicine,
+  technology, our planet and more."
+    />
+    <meta name="author" content="Suphachai Hestmark" />
+    <link rel="stylesheet" href="./../styles/globalStyles.css" />
+    <link rel="stylesheet" type="text/css" href="./../styles/explore.css" />
+    <title>News | Community Science Museum</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./../../index.html" class="nav__logo">
+        <img src="../images_csm/logo.png" alt="Logo" />
+      </a>
+      <ul class="nav__links">
+        <li class="nav__homeLink">
+          <a href="./../../index.html">Home</a>
+        </li>
+        <li>
+          <a href="../pages/exhibition.html">Exhibition</a>
+        </li>
+        <li class="nav__links--active">
+          <a href="../pages/explore.html">Explore</a>
+        </li>
+        <li>
+          <a href="../pages/joinus.html">Join us</a>
+        </li>
+        <li>
+          <a href="../pages/visit.html">Visit</a>
+        </li>
+      </ul>
+      <div class="nav__burger">
+        <div class="nav__burgerLine1"></div>
+        <div class="nav__burgerLine2"></div>
+        <div class="nav__burgerLine3"></div>
+      </div>
+    </nav>
 
-  <header class="explore__header" alt="Visit Community Science Museum">
+    <header class="explore__header" alt="Visit Community Science Museum">
       <h1>Explore</h1>
-  </header>
-  <h2 class="title_text">
-    Explore the world of science
-  </h2>
+    </header>
+    <h2 class="pages__foreWords">Explore the world of science</h2>
 
-  <main>
-    <!-- ----------- First Section ----------- -->
-    <section class="section_one">
-      <img src="/images_csm/mammoth-1257288.jpg" alt="Mammoth skeleton in the museum">
-      <p class="photo_source_mobile">Photo: Community Science Museum</p>
-      <h2 class="h2_one_push_right">For kids</h2>
+    <main>
+      <!-- ----------- First Section ----------- -->
+      <section class="section_one">
+        <img
+          src="/images_csm/mammoth-1257288.jpg"
+          alt="Mammoth skeleton in the museum"
+        />
+        <p class="photo_source_mobile">Photo: Community Science Museum</p>
+        <h2 class="h2_one_push_right">For kids</h2>
         <p class="article_text">
-          Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
+          Are you a young person looking to learn more about science? Come on
+          down to our museum, there’s plenty to see and do.
         </p>
         <p class="article_text">
-          You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident 
-          Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
+          You can learn about Newtonian physics from our bumper swing, or why
+          not travel back in time and meet our resident Woolly Mammoth? Our
+          exhibits are designed to be accessible for interested minds, so make
+          sure you come ready to learn and explore.
         </p>
-    </section>
-  <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+      </section>
+      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
 
-    <!-- ----------- Second Section ----------- -->
-  <section class="section_two">
-    <img src="/images_csm/for_kids_2.jpg" alt="Kids playing with VR screen and playing gravity">
-      <p class="photo_source_mobile">Photo: Community Science Museum</p>
+      <!-- ----------- Second Section ----------- -->
+      <section class="section_two">
+        <img
+          src="/images_csm/for_kids_2.jpg"
+          alt="Kids playing with VR screen and playing gravity"
+        />
+        <p class="photo_source_mobile">Photo: Community Science Museum</p>
         <p class="article_text">
-          We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to 
-          explore and experiment with our team of experts.
+          We also have the Young Stars club which meets once a week on a
+          Saturday between 10:00 and 13:00 where you’ll get to explore and
+          experiment with our team of experts.
         </p>
         <p class="article_text">
-          During the school holidays we run special holiday clubs where you can join other children your age to go on a journey 
-          of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, 
-          send us a message.
+          During the school holidays we run special holiday clubs where you can
+          join other children your age to go on a journey of discovery. Each
+          holiday we pick a new theme to explore. To find out more about the
+          holiday club and how you can join, send us a message.
         </p>
-  </section>
-  <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
+      </section>
+      <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
 
-    <!-- ----------- Third Section ----------- -->
-  <section class="section_one">
-    <img src="/images_csm/science-in-hd-_Ym6wla_GMQ-unsplash.jpg" alt="Teachers teaching science and math calculations">
-    <p class="photo_source_mobile">Photo: Science in HD on Unsplash</p>
-      <h2 class="h2_one_push_right">For teachers</h2>
+      <!-- ----------- Third Section ----------- -->
+      <section class="section_one">
+        <img
+          src="/images_csm/science-in-hd-_Ym6wla_GMQ-unsplash.jpg"
+          alt="Teachers teaching science and math calculations"
+        />
+        <p class="photo_source_mobile">Photo: Science in HD on Unsplash</p>
+        <h2 class="h2_one_push_right">For teachers</h2>
         <p class="article_text">
-          As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team 
-          are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide 
-          great video presentations that will excite and inspire them.
+          As a community-driven museum, we want to work with schools to create
+          places of learning and exploring. Our team are on hand to give your
+          students guided tours of the museum, teach them in our learning
+          laboratory, and provide great video presentations that will excite and
+          inspire them.
         </p>
         <p class="article_text">
-          Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
+          Please get in touch with us here to find out more about our facilities
+          and to arrange a time to bring your students through for a visit.
         </p>
       </section>
       <p class="photo_source_desktop_one">Photo: Science in HD on Unsplash</p>
-    
+
       <!-- ----------- Fouth Section ----------- -->
       <section class="section_two">
-        <img src="/images_csm/hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Research in the chemical laboratory">
-          <p class="photo_source_mobile">Photo: Hans Reniers on Unsplash</p>
-          <h2 class="h2_two_push_right">Researchers</h2>
-            <p class="article_text">
-              Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our 
-              resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of 
-              universities around the country.
-            </p>
+        <img
+          src="/images_csm/hans-reniers-lQGJCMY5qcM-unsplash.jpg"
+          alt="Research in the chemical laboratory"
+        />
+        <p class="photo_source_mobile">Photo: Hans Reniers on Unsplash</p>
+        <h2 class="h2_two_push_right">Researchers</h2>
+        <p class="article_text">
+          Are you looking to get involved with our team of researchers and
+          academics? Our museum offers various ways for you to use our resources
+          and contribute towards them. We have online records, laboratory space,
+          and a working relationship with a number of universities around the
+          country.
+        </p>
       </section>
       <p class="photo_source_desktop_two">Photo: Hans Reniers on Unsplash</p>
-  </main>
+    </main>
 
-   <!-- --------- Form -------------- Form ----------- -->
-   <div class="form_container">
-    <p class="contact_us">Contact us</p>
-    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
-      respond as soon as possible.
-    </p>
-    <br>
-  <form class="contact_form" action="/contactform.php" method="post">
-    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
-    <input type="text" name="email" id="email" placeholder="E-mail">
-    <input type="text" name="subject" id="subject" placeholder="Subject">
-    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
-    <button type="submit" value="Submit">SUBMIT</button>
-    </form>
-  </div>
-  
-<footer class="footer"></footer>
+    <!-- --------- Form -------------- Form ----------- -->
+    <div class="form_container">
+      <p class="contact_us">Contact us</p>
+      <p class="form_text">
+        Got a questions? We'd love to hear from you. Send us a message and we'll
+        respond as soon as possible.
+      </p>
+      <br />
+      <form class="contact_form" action="/contactform.php" method="post">
+        <input
+          type="text"
+          name="fullname"
+          id="fullname"
+          placeholder="Full name"
+          value=""
+        />
+        <input type="text" name="email" id="email" placeholder="E-mail" />
+        <input type="text" name="subject" id="subject" placeholder="Subject" />
+        <textarea
+          class="comment_box"
+          name="message"
+          placeholder="Message"
+        ></textarea>
+        <button type="submit" value="Submit">SUBMIT</button>
+      </form>
+    </div>
 
-<script src="../components/Footer.js"></script>  
-<script src="../app.js"></script>
-<!-- Photo source on third section: url <https://unsplash.com/photos/_Ym6wla_GMQ> by Science in HD on Unsplash.
+    <footer class="footer"></footer>
+
+    <script src="../components/Footer.js"></script>
+    <script src="../app.js"></script>
+    <!-- Photo source on third section: url <https://unsplash.com/photos/_Ym6wla_GMQ> by Science in HD on Unsplash.
 Photo source on fouth section: url <https://unsplash.com/photos/lQGJCMY5qcM> by Hans Reniers on Unsplash -->
-</body>
+  </body>
 </html>
