--- a/src/pages/visit.html
+++ b/src/pages/visit.html
@@ -1,124 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Make an unforgettable visit at our museum. With free admission and accessibility for wheelchair made it easier for everyone to explore.">
-  <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/globalStyles.css">
-  <link rel="stylesheet" type="text/css" href="./../styles/visit.css">
-  <title>Visit | Community Science Museum</title>
-</head>
-<body>
-  
-  <nav class="nav"> 
-    <a href="./../../index.html" class="nav__logo">
-      <img src="../images_csm/logo.png" alt="Logo">
-    </a>
-    <ul class="nav__links">
-      <li class="nav__homeLink">
-        <a href="./../../index.html">Home</a>
-      </li>
-      <li>
-        <a href="../pages/exhibition.html">Exhibition</a>
-      </li>
-      <li>
-        <a href="../pages/explore.html">Explore</a>
-      </li>
-      <li>
-        <a href="../pages/joinus.html">Join us</a>
-      </li>
-      <li class="nav__links--active">
-        <a href="../pages/visit.html">Visit</a>
-      </li>
-    </ul>
-    <div class="nav__burger">
-      <div class="nav__burgerLine1"></div>
-      <div class="nav__burgerLine2"></div>
-      <div class="nav__burgerLine3"></div>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Make an unforgettable visit at our museum. With free admission and accessibility for wheelchair made it easier for everyone to explore."
+    />
+    <meta name="author" content="Suphachai Hestmark" />
+    <link rel="stylesheet" href="./../styles/globalStyles.css" />
+    <link rel="stylesheet" type="text/css" href="./../styles/visit.css" />
+    <title>Visit | Community Science Museum</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./../../index.html" class="nav__logo">
+        <img src="../images_csm/logo.png" alt="Logo" />
+      </a>
+      <ul class="nav__links">
+        <li class="nav__homeLink">
+          <a href="./../../index.html">Home</a>
+        </li>
+        <li>
+          <a href="../pages/exhibition.html">Exhibition</a>
+        </li>
+        <li>
+          <a href="../pages/explore.html">Explore</a>
+        </li>
+        <li>
+          <a href="../pages/joinus.html">Join us</a>
+        </li>
+        <li class="nav__links--active">
+          <a href="../pages/visit.html">Visit</a>
+        </li>
+      </ul>
+      <div class="nav__burger">
+        <div class="nav__burgerLine1"></div>
+        <div class="nav__burgerLine2"></div>
+        <div class="nav__burgerLine3"></div>
+      </div>
+    </nav>
 
-  <header class="visit__header" alt="Visit Community Science Museum">
+    <header class="visit__header" alt="Visit Community Science Museum">
       <h1>Visit</h1>
-  </header>
-  <h2 class="title_text">
-    Plan your visit
-  </h2>
+    </header>
+    <h2 class="pages__foreWords">
+      Plan your visit, bring your friends and families to an scientific
+      experience.
+    </h2>
 
-  <main class="items_container">
-    <!-- -------------------- First Section ----------- -->
-  <section class="section_container">
-    <img src="/images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg" alt="Holding ticket in hand">
-    <p class="photo_source">Photo: Andy Li on Unsplash</p>
-    <h2>Admission</h2>
-      <p class="article_text">
-        The entrance is free for all.
-      </p>
-      <p class="article_text">
-        There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy
-          printed guide of the museum.
-      </p>
-      <p class="article_text">
-        If you would like to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour.
-      </p>
-  </section>
-  
-    <!-- -------------------- Second Section ----------- -->
-  <section class="section_container">
-    <img src="/images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg" alt="Handicap sign painten in the parking lot">
-      <p class="photo_source">Photo: Photo by AbsolutVision on Unsplash</p>
-      <h2>Accessibility</h2>
+    <main class="items_container">
+      <!-- -------------------- First Section ----------- -->
+      <section class="section_container">
+        <img
+          src="/images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg"
+          alt="Holding ticket in hand"
+        />
+        <p class="photo_source">Photo: Andy Li on Unsplash</p>
+        <h2>Admission</h2>
+        <p class="article_text">The entrance is free for all.</p>
         <p class="article_text">
-          The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+          There are guided tours of the museum that leave every hour. These
+          tours are 70 NOK per person and include a handy printed guide of the
+          museum.
         </p>
-  </section>
-  
-    <!-- --------------------- Third Section ----------- -->
-  <section class="section_container">
-    <img src="/images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg" alt="Waffles and coffe on the table, lunckbreak or coffee time">
-    <p class="photo_source">Photo: Joseph Gonzalez on Unsplash</p>
-      <h2>Food and drinks</h2>
         <p class="article_text">
-          There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+          If you would like to organise a guided tour for your group of 6 or
+          more people, please contact us to arrange the tour.
         </p>
-  </section>
-    
-  <!-- ----------------------- Fouth Section ----------- -->
-  <section class="section_container">
-    <img src="/images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg" alt="A sign showing that the shop is open, or open sign">
-      <p class="photo_source">Photo: Mike Petrucci on Unsplash</p>
-      <h2>Shop</h2>
-        <p class="article_text">
-          Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you 
-          to continue to explore science even after you’ve left the museum.
-        </p>
-  </section>
-</main>
+      </section>
 
-  <!-- --------- Form -------------- Form ----------- -->
-  <div class="form_container">
-    <p class="contact_us">Contact us</p>
-    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
-      respond as soon as possible.
-    </p>
-    <br>
-  <form class="contact_form" action="/contactform.php" method="post">
-    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
-    <input type="text" name="email" id="email" placeholder="E-mail">
-    <input type="text" name="subject" id="subject" placeholder="Subject">
-    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
-    <button type="submit" value="Submit">SUBMIT</button>
-    </form>
-  </div>
-  
-<footer class="footer"></footer>
+      <!-- -------------------- Second Section ----------- -->
+      <section class="section_container">
+        <img
+          src="/images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg"
+          alt="Handicap sign painten in the parking lot"
+        />
+        <p class="photo_source">Photo: Photo by AbsolutVision on Unsplash</p>
+        <h2>Accessibility</h2>
+        <p class="article_text">
+          The museum has wheelchair accessibility ramps. It also has audio
+          guides and braille display signs for the visually impaired.
+        </p>
+      </section>
 
-<script src="../components/Footer.js"></script>  
-<script src="../app.js"></script>
-<!-- Image source: url <https://unsplash.com/photos/A_dJOYpxEVU> by Andy Li on Unsplash -->
-<!-- Image source: url <https://unsplash.com/photos/UudGNHJdNSo> by Photo by AbsolutVision on Unsplash -->
-<!-- Image source: url <https://unsplash.com/photos/Wns3U-oVoLA> by Joseph Gonzalez on Unsplash -->
-<!-- Image source: url <https://unsplash.com/photos/c9FQyqIECds> by Mike Petrucci on Unsplash -->
-</body>
+      <!-- --------------------- Third Section ----------- -->
+      <section class="section_container">
+        <img
+          src="/images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg"
+          alt="Waffles and coffe on the table, lunckbreak or coffee time"
+        />
+        <p class="photo_source">Photo: Joseph Gonzalez on Unsplash</p>
+        <h2>Food and drinks</h2>
+        <p class="article_text">
+          There is a café attached to the museum where you can get light
+          lunches, soft drinks, coffee, snacks and more.
+        </p>
+      </section>
+
+      <!-- ----------------------- Fouth Section ----------- -->
+      <section class="section_container">
+        <img
+          src="/images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg"
+          alt="A sign showing that the shop is open, or open sign"
+        />
+        <p class="photo_source">Photo: Mike Petrucci on Unsplash</p>
+        <h2>Shop</h2>
+        <p class="article_text">
+          Our shop offers a range of memorabilia from the museum as well as
+          great gifts and activity packs that allow you to continue to explore
+          science even after you’ve left the museum.
+        </p>
+      </section>
+    </main>
+
+    <!-- --------- Form -------------- Form ----------- -->
+    <div class="form_container">
+      <p class="contact_us">Contact us</p>
+      <p class="form_text">
+        Got a questions? We'd love to hear from you. Send us a message and we'll
+        respond as soon as possible.
+      </p>
+      <br />
+      <form class="contact_form" action="/contactform.php" method="post">
+        <input
+          type="text"
+          name="fullname"
+          id="fullname"
+          placeholder="Full name"
+          value=""
+        />
+        <input type="text" name="email" id="email" placeholder="E-mail" />
+        <input type="text" name="subject" id="subject" placeholder="Subject" />
+        <textarea
+          class="comment_box"
+          name="message"
+          placeholder="Message"
+        ></textarea>
+        <button type="submit" value="Submit">SUBMIT</button>
+      </form>
+    </div>
+
+    <footer class="footer"></footer>
+
+    <script src="../components/Footer.js"></script>
+    <script src="../app.js"></script>
+    <!-- Image source: url <https://unsplash.com/photos/A_dJOYpxEVU> by Andy Li on Unsplash -->
+    <!-- Image source: url <https://unsplash.com/photos/UudGNHJdNSo> by Photo by AbsolutVision on Unsplash -->
+    <!-- Image source: url <https://unsplash.com/photos/Wns3U-oVoLA> by Joseph Gonzalez on Unsplash -->
+    <!-- Image source: url <https://unsplash.com/photos/c9FQyqIECds> by Mike Petrucci on Unsplash -->
+  </body>
 </html>
