--- a/index.html
+++ b/index.html
@@ -1,116 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all. 
-  The admission is free and there's plenty of things to explore">
-  <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="./src/styles/globalStyles.css">
-  <link rel="stylesheet" href="./src/styles/home.css">
-  <title>Community Science Museum | Explore Together</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Come join us at the Community Science Museum where we’re committed to making science accessible to all. 
+  The admission is free and there's plenty of things to explore"
+    />
+    <meta name="author" content="Suphachai Hestmark" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./src/styles/globalStyles.css"
+    />
+    <link rel="stylesheet" href="./src/styles/home.css" />
+    <title>Community Science Museum | Explore Together</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./index.html" class="nav__logo">
+        <img src="./src/images_csm/logo.png" alt="Logo" />
+      </a>
+      <ul class="nav__links">
+        <li class="nav__links--active nav__homeLink">
+          <a href="./index.html">Home</a>
+        </li>
+        <li>
+          <a href="./src/pages/exhibition.html">Exhibition</a>
+        </li>
+        <li>
+          <a href="./src/pages/explore.html">Explore</a>
+        </li>
+        <li>
+          <a href="./src/pages/joinus.html">Join us</a>
+        </li>
+        <li>
+          <a href="./src/pages/visit.html">Visit</a>
+        </li>
+      </ul>
+      <div class="nav__burger">
+        <div class="nav__burgerLine1"></div>
+        <div class="nav__burgerLine2"></div>
+        <div class="nav__burgerLine3"></div>
+      </div>
+    </nav>
 
-  <nav class="nav"> 
-    <a href="./index.html" class="nav__logo">
-      <img src="./src/images_csm/logo.png" alt="Logo">
-    </a>
-    <ul class="nav__links">
-      <li class="nav__links--active nav__homeLink">
-        <a href="./index.html">Home</a>
-      </li>
-      <li>
-        <a href="./src/pages/exhibition.html">Exhibition</a>
-      </li>
-      <li>
-        <a href="./src/pages/explore.html">Explore</a>
-      </li>
-      <li>
-        <a href="./src/pages/joinus.html">Join us</a>
-      </li>
-      <li>
-        <a href="./src/pages/visit.html">Visit</a>
-      </li>
-    </ul>
-    <div class="nav__burger">
-      <div class="nav__burgerLine1"></div>
-      <div class="nav__burgerLine2"></div>
-      <div class="nav__burgerLine3"></div>
-    </div>
-  </nav>
+    <header class="index__header">
+      <div class="index__headerUpper">
+        <h1>Explore together</h1>
+        <h2>Welcome to Community Science Museum</h2>
+      </div>
+      <div class="index__headerBottom">
+        <h4>Open daily except Monday</h4>
+        <h4>Admission: <strong>Free</strong></h4>
+      </div>
+    </header>
 
-
-  <header class="index__header">
-    <div class="index__headerUpper">
-      <h1>Explore together</h1>
-      <h2>Welcome to Community Science Museum</h2>
-    </div>
-    <div class="index__headerBottom">
-      <h4>Open daily except Monday</h4>
-      <h4>Admission: <strong>Free</strong></h4>
-    </div>
-  </header>
-
-  <main class="index__main">
-    <h2 class="index__subHeader">What's new</h2>
-    <section class="index__sections">
-      <div class="index__SectionsImageContainer">
-        <img src="./src/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
-      </div>
-      <div class="index__sectionTextContainer">
-        <h2>Visiting Professor of Aeronautics</h2>
-        <p>
-          It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology
-          will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
-        </p>
-      </div>
-    </section>
-    <section class="index__sections">
-      <div class="index__SectionsImageContainer">
-        <img src="./src/images_csm/roberto-nickson-396152.jpg" alt="Mammut in the museum by night">
-      </div>
-      <div class="index__sectionTextContainer">
-        <h2>Night in the Museum</h2>
-        <p>
-          Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. 
-          Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
-        </p>
-      </div>
-    </section>
-    <section class="index__sections">
-      <div class="index__SectionsImageContainer">
-        <img src="./src/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg" alt="Light being power up by electricity">
-      </div>
-      <div class="index__sectionTextContainer">
-        <h2>Energetica Exhibition on Loan</h2>
-        <p>
-          On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
-          It’s a series of installations that allow visitors to experience the power of the elements as we harness them. 
-          From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
-        </p>
-      </div>
+    <main class="index__main">
+      <h2 class="index__subHeader">What's new</h2>
+      <section class="index__sections">
+        <div class="index__SectionsImageContainer">
+          <img
+            src="./src/images_csm/scientific-2040795.jpg"
+            alt="Professor doing reasearch in the science lab."
+          />
+        </div>
+        <div class="index__sectionTextContainer">
+          <h2>Visiting Professor of Aeronautics</h2>
+          <p>
+            It is our pleasure to announce that Prof Sheila Widnall from the
+            Massachusetts Institute of Technology will be delivering 3 lectures
+            on the development of aeronautics and where the future lies in this
+            exciting ‘space’.
+          </p>
+        </div>
       </section>
-  </main>
+      <section class="index__sections">
+        <div class="index__SectionsImageContainer">
+          <img
+            src="./src/images_csm/roberto-nickson-396152.jpg"
+            alt="Mammut in the museum by night"
+          />
+        </div>
+        <div class="index__sectionTextContainer">
+          <h2>Night in the Museum</h2>
+          <p>
+            Get your family together for an exciting night in the museum as you
+            sleep over beside dinosaurs and science displays. Bring your own
+            sleeping bag and get ready to rough it as we go exploring the
+            wonders of science.
+          </p>
+        </div>
+      </section>
+      <section class="index__sections">
+        <div class="index__SectionsImageContainer">
+          <img
+            src="./src/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg"
+            alt="Light being power up by electricity"
+          />
+        </div>
+        <div class="index__sectionTextContainer">
+          <h2>Energetica Exhibition on Loan</h2>
+          <p>
+            On loan from the NEMO Science Museum in Amsterdam, the Energetica
+            exhibition is coming to the Community Science Museum. It’s a series
+            of installations that allow visitors to experience the power of the
+            elements as we harness them. From solar energy powering lighting, to
+            ‘Wind Island’ that shows how turbines are able to use and control
+            wind to create power.
+          </p>
+        </div>
+      </section>
+    </main>
 
     <!-- ----------- Form Section ----------- -->
-  <div class="index__formComtainer">
-    <h4>
-      Bring some science to your inbox.
-    </h4>
-  <form class="index__form">
-    <input type="text" name="email" placeholder="E-mail">
-    <button type="submit" value="Submit">
-      SUBMIT
-    </button>
-    </form>
-  </div>
+    <div class="index__formComtainer">
+      <h4>Bring some science to your inbox.</h4>
+      <form class="index__form">
+        <input type="text" name="email" placeholder="E-mail" />
+        <button type="submit" value="Submit">SUBMIT</button>
+      </form>
+    </div>
 
-  <!-- ----------- Footer ----------- -->
-  <footer class="footer"></footer>
-  
-  <script src="./src/components/Footer.js"></script>
-  <script src="./src/app.js"></script>
+    <!-- ----------- Footer ----------- -->
+    <footer class="footer"></footer>
+
+    <script src="./src/components/Footer.js"></script>
+    <script src="./src/app.js"></script>
     <!-- Source photo for "Energetica": url <https://unsplash.com/photos/gxsRL8B_ZqE>, Photo by Christian Dubovan on Unsplash -->
-</body>
+  </body>
 </html>
