--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -1,153 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get involve with our programs and explore the world of science. Collaborate with our amazing team and more.">
-  <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" href="./../styles/globalStyles.css">
-  <link rel="stylesheet" type="text/css" href="./../styles/joinus.css">
-<title>Connect | Cummunity Science Museum</title>
-</head>
-<body>
-  
-  <nav class="nav"> 
-    <a href="./../../index.html" class="nav__logo">
-      <img src="../images_csm/logo.png" alt="Logo">
-    </a>
-    <ul class="nav__links">
-      <li class="nav__homeLink">
-        <a href="./../../index.html">Home</a>
-      </li>
-      <li>
-        <a href="../pages/exhibition.html">Exhibition</a>
-      </li>
-      <li>
-        <a href="../pages/explore.html">Explore</a>
-      </li>
-      <li class="nav__links--active">
-        <a href="../pages/joinus.html">Join us</a>
-      </li>
-      <li>
-        <a href="../pages/visit.html">Visit</a>
-      </li>
-    </ul>
-    <div class="nav__burger">
-      <div class="nav__burgerLine1"></div>
-      <div class="nav__burgerLine2"></div>
-      <div class="nav__burgerLine3"></div>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get involve with our programs and explore the world of science. Collaborate with our amazing team and more."
+    />
+    <meta name="author" content="Suphachai Hestmark" />
+    <link rel="stylesheet" href="./../styles/globalStyles.css" />
+    <link rel="stylesheet" type="text/css" href="./../styles/joinus.css" />
+    <title>Connect | Cummunity Science Museum</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./../../index.html" class="nav__logo">
+        <img src="../images_csm/logo.png" alt="Logo" />
+      </a>
+      <ul class="nav__links">
+        <li class="nav__homeLink">
+          <a href="./../../index.html">Home</a>
+        </li>
+        <li>
+          <a href="../pages/exhibition.html">Exhibition</a>
+        </li>
+        <li>
+          <a href="../pages/explore.html">Explore</a>
+        </li>
+        <li class="nav__links--active">
+          <a href="../pages/joinus.html">Join us</a>
+        </li>
+        <li>
+          <a href="../pages/visit.html">Visit</a>
+        </li>
+      </ul>
+      <div class="nav__burger">
+        <div class="nav__burgerLine1"></div>
+        <div class="nav__burgerLine2"></div>
+        <div class="nav__burgerLine3"></div>
+      </div>
+    </nav>
 
-  <header class="joinus__header" alt="Visit Community Science Museum">
+    <header class="joinus__header" alt="Visit Community Science Museum">
       <h1>Join us</h1>
-  </header>
-  <h2 class="title_text">
-    Come join us at the Community Science Museum where we’re committed to making science accessible to all.
-  </h2>
-  
-  <main>
-  <!-- ----------- First Section ----------- -->
-    <section class="section_one">
-      <img src="/images_csm/celso-405219.jpg" alt="Moon cosmology in when changing colors">
-    <p class="photo_source_mobile">Photo: Community Science Museum</p>
-    <p class="article_text">
-      Over the course of human history, science has developed from our early understanding of fire, wind, water, and 
-      earth to exploring everything from galaxies far away to the very building blocks of life itself.
-      The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and 
-      perhaps even ignite a lifelong passion to continue the exploration of the world around us.
-    </p>
-  </section>
-  <!-- ----------- Second Section ----------- -->
-  <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
-  <section class="section_two">
-    <img src="/images_csm/exhibition.jpg" alt="Exhibition spaces of Community Science Museum">
-    <p class="photo_source_mobile">Photo: Community Science Museum</p>
-    <p class="article_text">
-      We believe science should not be confined to the textbook, but brought to live through exhibits. This is 
-      why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these 
-      exhibits are designed for you to interact with and play around to see science come to life (apart from the 
-      dinosaur exhibits – they only come to life at night when everyone’s gone home).
-    </p>
-  </section>
-  <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
+    </header>
+    <h2 class="pages__foreWords">
+      Come join us at the Community Science Museum where we’re committed to
+      making science accessible to all.
+    </h2>
 
-  <h2 class="get_involved_title">Get Involved</h2>
-    <!-- ----------- Third Section ----------- -->
-    <section class="section_one">
-      <img src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg" alt="Giving heart to each other, supporting each other.">
-      <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
-      <h2 class="h2_one_push_right">Support</h2>
+    <main>
+      <!-- ----------- First Section ----------- -->
+      <section class="section_one">
+        <img
+          src="/images_csm/celso-405219.jpg"
+          alt="Moon cosmology in when changing colors"
+        />
+        <p class="photo_source_mobile">Photo: Community Science Museum</p>
         <p class="article_text">
-          There are various ways you can support the museum. Donations are very welcome and are an important 
-          way we keep this museum open and accessible to the whole community.
+          Over the course of human history, science has developed from our early
+          understanding of fire, wind, water, and earth to exploring everything
+          from galaxies far away to the very building blocks of life itself. The
+          aim of our museum is to create a space where everyone can experience
+          the wonders of our discoveries and perhaps even ignite a lifelong
+          passion to continue the exploration of the world around us.
         </p>
+      </section>
+      <!-- ----------- Second Section ----------- -->
+      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+      <section class="section_two">
+        <img
+          src="/images_csm/exhibition.jpg"
+          alt="Exhibition spaces of Community Science Museum"
+        />
+        <p class="photo_source_mobile">Photo: Community Science Museum</p>
         <p class="article_text">
-          You can also support us by donating items of interest to the museum’s collections. If you have 
-          some item or collection that you think others would enjoy, please let us know by contacting our 
-          Collections Department and they will be able to assist you.
+          We believe science should not be confined to the textbook, but brought
+          to live through exhibits. This is why we have over 1000 different
+          exhibits on the many varied subjects of science to explore. Many of
+          these exhibits are designed for you to interact with and play around
+          to see science come to life (apart from the dinosaur exhibits – they
+          only come to life at night when everyone’s gone home).
         </p>
-    </section>
-  <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
+      </section>
+      <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
 
-  <!-- ----------- Fouth Section ----------- -->
-  <section class="section_two">
-    <img src="/images_csm/teamwork_join_hands1804.jpg" alt="Get involve by teamwork, join hands.">
-      <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
-      <h2 class="h2_two_push_right">Volunteer</h2>
+      <h2 class="get_involved_title">Get Involved</h2>
+      <!-- ----------- Third Section ----------- -->
+      <section class="section_one">
+        <img
+          src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg"
+          alt="Giving heart to each other, supporting each other."
+        />
+        <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
+        <h2 class="h2_one_push_right">Support</h2>
         <p class="article_text">
-          A number of people volunteer their time and effort to keep the displays in good order and ready 
-          for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes 
-          of a working museum, access to staff- only lectures, and a monthly lunch where all staff and volunteers 
-          come together to discuss ideas for future exhibits and strategies for the museum.
+          There are various ways you can support the museum. Donations are very
+          welcome and are an important way we keep this museum open and
+          accessible to the whole community.
         </p>
         <p class="article_text">
-          You can help volunteer in a number of different spheres. Please contact us if you’d like to find out
-          more about how you can get involved.
+          You can also support us by donating items of interest to the museum’s
+          collections. If you have some item or collection that you think others
+          would enjoy, please let us know by contacting our Collections
+          Department and they will be able to assist you.
         </p>
-  </section>
-  <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
+      </section>
+      <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
 
-  <!-- ----------- Fifth Section ----------- -->
-  <section class="section_one">
-    <img src="/images_csm/people-219985_1280.jpg" alt="A researcher looking throught microscope.">
-    <p class="photo_source_mobile">Photo: Community Science Museum</p>
-      <h2 class="h2_one_push_right">Internships</h2>
+      <!-- ----------- Fouth Section ----------- -->
+      <section class="section_two">
+        <img
+          src="/images_csm/teamwork_join_hands1804.jpg"
+          alt="Get involve by teamwork, join hands."
+        />
+        <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
+        <h2 class="h2_two_push_right">Volunteer</h2>
         <p class="article_text">
-          Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with 
-          people? Well you could be just the right person to enjoy an internship at the museum.
+          A number of people volunteer their time and effort to keep the
+          displays in good order and ready for visitors to come and enjoy.
+          Volunteering has its perks including getting to see behind the scenes
+          of a working museum, access to staff- only lectures, and a monthly
+          lunch where all staff and volunteers come together to discuss ideas
+          for future exhibits and strategies for the museum.
         </p>
         <p class="article_text">
-          You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
+          You can help volunteer in a number of different spheres. Please
+          contact us if you’d like to find out more about how you can get
+          involved.
+        </p>
+      </section>
+      <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
+
+      <!-- ----------- Fifth Section ----------- -->
+      <section class="section_one">
+        <img
+          src="/images_csm/people-219985_1280.jpg"
+          alt="A researcher looking throught microscope."
+        />
+        <p class="photo_source_mobile">Photo: Community Science Museum</p>
+        <h2 class="h2_one_push_right">Internships</h2>
+        <p class="article_text">
+          Are you interested in working in a museum? Do you enjoy the fun and
+          excitement of sharing the wonders of nature with people? Well you
+          could be just the right person to enjoy an internship at the museum.
+        </p>
+        <p class="article_text">
+          You’ll be learning from a number of different academics and people who
+          are passionate about science and sharing it with the wider community.
         </p>
       </section>
       <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
-  </main>
+    </main>
 
+    <!-- --------- Form -------------- Form ----------- -->
+    <div class="form_container">
+      <p class="contact_us">Contact us</p>
+      <p class="form_text">
+        Got a questions? We'd love to hear from you. Send us a message and we'll
+        respond as soon as possible.
+      </p>
+      <br />
+      <form class="contact_form" action="/contactform.php" method="post">
+        <input
+          type="text"
+          name="fullname"
+          id="fullname"
+          placeholder="Full name"
+          value=""
+        />
+        <input type="text" name="email" id="email" placeholder="E-mail" />
+        <input type="text" name="subject" id="subject" placeholder="Subject" />
+        <textarea
+          class="comment_box"
+          name="message"
+          placeholder="Message"
+        ></textarea>
+        <button type="submit" value="Submit">SUBMIT</button>
+      </form>
+    </div>
 
-  <!-- --------- Form -------------- Form ----------- -->
-  <div class="form_container">
-    <p class="contact_us">Contact us</p>
-    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
-      respond as soon as possible.
-    </p>
-    <br>
-  <form class="contact_form" action="/contactform.php" method="post">
-    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
-    <input type="text" name="email" id="email" placeholder="E-mail">
-    <input type="text" name="subject" id="subject" placeholder="Subject">
-    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
-    <button type="submit" value="Submit">SUBMIT</button>
-    </form>
-  </div>
-  
+    <footer class="footer"></footer>
 
-<footer class="footer"></footer>
-
-<script src="../components/Footer.js"></script>  
-<script src="../app.js"></script>
-  <!-- Image source: url <https://unsplash.com/photos/4le7k9XVYjE> by Kelly Sikkema on Unsplash 
+    <script src="../components/Footer.js"></script>
+    <script src="../app.js"></script>
+    <!-- Image source: url <https://unsplash.com/photos/4le7k9XVYjE> by Kelly Sikkema on Unsplash 
       Image Source: url <https://www.freepik.com/free-photo/business-teamwork-join-hands-together-business-teamwork-concept_1185949.htm#page=1&query=support&position=28> by jcomp / Freepik
-  -->
-</body>
+  --></body>
 </html>
